# task_manager_cli

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: cli.py  main.py  storage.py
app/models/: model.py
data/: task.json
src/taskcli/: model.py  service.py  storage.py
taskcli-project/: main.py
taskcli-project/data/: task.json  tasks.json
taskcli-project/src/taskcli/: cli.py  model.py  service.py  storage.py
taskcli-project/src/taskcli/data/: tasks.json
tests/: test_service.py
